--- a/my-app/src/app/owner-management/owner-management.component.html
+++ b/my-app/src/app/owner-management/owner-management.component.html
@@ -19,7 +19,7 @@
 
       <div class="translate-y-[32px] -translate-x-[500px]">
           <button (click)="addOwner()" type="submit" class="mb-16 rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Owner</button>
-          <button type="submit" class="absolute ml-10 w-[200px] rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Show Owners Table</button>
+          <button routerLink="/owner_management/owner_table" type="submit" class="absolute ml-10 w-[200px] rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Show Owners Table</button>
       </div>
     </div>
 
