--- a/my-app/src/app/owner-table/owner-table.component.html
+++ b/my-app/src/app/owner-table/owner-table.component.html
@@ -1,7 +1,50 @@
-<div class="translate-y-[250px] translate-x-[250px]">
-    <h2>Owners List</h2>
-    <ul>
-      <li *ngFor="let owner of _shared.owners">{{ owner.owner_id }} - {{ owner.owner_name }} <button (click)="deleteOwner(owner.owner_id)" class="mr-5">Delete</button> <button (click)="editOwner(owner.owner_id)">Edit</button></li>
-    </ul>
-    <p *ngIf="this._shared.owners.length == 0">Owners Table Is Empty</p>
+<div class=" translate-y-[80px] px-4 sm:px-6 lg:px-8">
+  <div class="sm:flex sm:items-center">
+    <div class="sm:flex-auto">
+      <h1 class="text-base font-semibold leading-6 text-gray-900">Owners</h1>
+      <p class="mt-2 text-sm text-gray-700">A list of all the users in your account including their name and Id and their products</p>
+    </div>
+    <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
+      <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add user</button>
+    </div>
+  </div>
+  <div class="mt-8 flow-root">
+    <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+      <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+        <table class="min-w-full">
+          <thead class="">
+            <tr>
+              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-3">ID</th>
+              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Name</th>
+              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Products</th>
+            </tr>
+          </thead>
+          <tbody class="bg-white/30 backdrop-blur-sm">
+            <tr class="border-t border-gray-200">
+            </tr>
+            <tr *ngFor="let owner of _shared.owners" class="border-t border-gray-300">
+              <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-3">{{ owner.owner_id }}</td>
+              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ owner.owner_name }}</td>
+              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"> OWNER PRODUCTS GO HERE</td>
+              <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-3">
+                <button (click)="deleteOwner(owner.owner_id)" class="text-red-600 hover:text-red-900">Delete</button>
+              </td>
+              <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-3">
+                <button (click)="editOwner(owner.owner_id)" class="text-indigo-600 hover:text-indigo-900">Edit</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="absolute inset-x-0 -top-40 z-10 transform-gpu overflow-hidden -translate-y-[50px] -translate-x-[250px] blur-3xl sm:-top-80" aria-hidden="true">
+  <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+</div>
+<div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
+  <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+</div>
+<div class="absolute inset-x-0 -top-40 z-10 transform-gpu overflow-hidden translate-y-[50px] -translate-x-[250px] blur-3xl sm:-top-80" aria-hidden="true">
+  <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
 </div>
