--- a/my-app/src/app/product-management/product-management.component.html
+++ b/my-app/src/app/product-management/product-management.component.html
@@ -157,6 +157,14 @@
             <p class="mt-4 text-base font-medium text-gray-900">$15</p>
           </div>
         </div>
+        <button routerLink="/product_management/add_product" class="group relative border-b border-r border-gray-200 p-4 sm:p-6 flex justify-center items-center">
+            <svg class="w-[50px] group-hover:opacity-75 " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none" stroke="gray" stroke-width="1.5">
+              <path d="M10 0v20M0 10h20" />
+            </svg>
+        </button>
+          
+          
+        
   
         <!-- More products... -->
       </div>
