--- a/my-app/src/app/add-product/add-product.component.html
+++ b/my-app/src/app/add-product/add-product.component.html
@@ -58,10 +58,10 @@
         </div>
       </div>
       <div class="mt-14 sm:ml-16 sm:mt-0 sm:flex-none">
-        <button (click)="addProduct()" routerLink="" type="button" class="mt-9 translate-x-[250px] block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Product</button>
+        <button (click)="addProduct()" type="button" class="mt-9 translate-x-[250px] block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Product</button>
       </div>
       <div class="mt-4" *ngIf="message">
-        <p class="text-sm text-center text-gray-900 font-semibold">
+        <p class="text-9xl text-center text-gray-900 font-semibold">
           {{ message }}
         </p>
       </div>
